--- a/package.json
+++ b/package.json
@@ -8,13 +8,11 @@
   "license": "MIT",
   "scripts": {
     "build": "babel src --out-dir dist",
+    "test": "mocha --recursive --require babel-register",
     "prettier": "prettier --config ./.prettierrc --write \"**/*.js\"",
-    "pretest": "eslint --ignore-path .gitignore .",
-    "postinstall": "rm -rf dist && yarn run build",
+    "pretest": "eslint --ignore-path .gitignore . --fix && yarn build",
+    "postinstall": "rm -rf dist && yarn build",
     "lint": "yarn prettier --write --check --config ./.prettierrc \"**/*.js\" && eslint --fix ./src"
-  },
-  "bin": {
-    "merge": "./dist/commands/extract-ip-data.js"
   },
   "dependencies": {
     "@babel/cli": "^7.8.3",
@@ -28,13 +26,16 @@
   "devDependencies": {
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
+    "babel-register": "^6.26.0",
+    "chai": "^4.2.0",
+    "concat-stream": "^2.0.0",
+    "cross-spawn": "^7.0.1",
     "eslint": "^6.8.0",
     "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-import": "^2.20.0",
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.2.1",
-    "fs-extra": "^8.1.0",
-    "nodemon": "^2.0.2",
+    "mocha": "^7.0.0",
     "prettier": "^1.19.1"
   }
 }
